Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Mon Nov 23 22:23:06 2009 -0600

    Now each test can be represented as a scalar (the name/filepath) or as
    an array (of 2 items, first item of filepath and second for the
    description). The same applies to test plans.

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Mon Nov 23 19:47:23 2009 -0600

    To the details of each test we now have a new key: is_ok to know if the
    test failed or passed.

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Mon Nov 23 15:49:15 2009 -0600

    New changes

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Mon Nov 23 15:47:59 2009 -0600

    When a new format factory gets added we should still be calling
    Test::system::Output::Factory cause this is where _all_ formats are.
    Then user can override a format type by using Class::Factory.

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Mon Nov 23 13:19:48 2009 -0600

    New changes

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Mon Nov 23 13:18:05 2009 -0600

    Cleaner way: runtests for an array of test and run_test_plan for
    running/loading a test plan (in yaml), then it will call runtests() with
    the array of test to execute.
    
    Also now Test::System makes sure that %options is really a hash, if it
    doesn't then it dies.

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Sun Nov 22 13:51:09 2009 -0600

    Updated CPAN files and examples too

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Sat Nov 21 19:16:42 2009 -0600

    Files needed for building a new version

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Sat Nov 21 19:15:20 2009 -0600

    New changes.

Author: Pablo Fischer <pablo@pablo.com.mx>
Date:   Sat Nov 21 19:11:26 2009 -0600

     - Catch notes that come from the tests and place them on
     $result->{'notes'}
     - Result details are moved form $result->{'result'} to
     $result->{'details'}