@@ -32,4 +32,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: http://github.com/pfischer/Test-System
-version: 0.16
+version: 0.17
